feat: OIDC admin login + server scaling and connection-record archival
Management UI logs in via OIDC (Authorization Code + PKCE) and the admin
API validates the resulting JWT (Spring Security OAuth2 resource server,
lazy JWKS, issuer/expiry/optional-audience checks). Basic Auth removed.
A same-origin /oidc/token proxy exchanges the code so the SPA never calls
the IdP token endpoint directly (avoids CORS, keeps optional secret server-side).

Also lands this session's scaling/data work:
- O(1) NAT data routing: per-connection channelId->Channel map replaces the
  global O(n) ChannelGroup scan (also scopes routing to the owning client)
- auth/DB/NAT-push moved off the Netty event loop onto a bounded executor,
  with back-pressure on overload
- connection-record archival: roll detail older than a rolling 60-day window
  into per-natural-month totals (kept), then purge; composite (client_id,
  connected_at) index + Hibernate batch settings

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>